k8s/test-iiif/ingest-fester/fester-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "fester-ingress"
  namespace: "test-ingest-iiif"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:053298376377:certificate/393720a8-b63b-401f-9e8c-505d22a0be6d
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=1200,routing.http2.enabled=true
    alb.ingress.kubernetes.io/security-groups: sg-0a1d2f907294d67ec,sg-08dde2c502e5f018f,sg-08aa9651042d7ec64
  labels:
    app: "fester"
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: "fester-service"
              servicePort: 8183
